...
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="@dimen/title"
                android:text="Username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="Inserisci qui l'username ..."
                android:text=""/>

...
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="@dimen/title"
                android:text="Password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Inserisci qui la password ..."
                android:text=""/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:onClick="login"/>

        </LinearLayout>
...
