<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_carrello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nel carrello"
        android:textSize="25dp"/>

    <ListView
        android:layout_below="@id/tv_carrello"
        android:layout_above="@+id/ll_bottom"
        android:id="@+id/list_piatti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/totale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center"
            android:text="Totale: 0.0"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/conferma"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_small"
            android:layout_gravity="center"
            android:background="@drawable/bordo_verde_state"
            android:textColor="@color/buttonSave"
            android:text="Conferma"
            android:textSize="20dp"/>
    </LinearLayout>

</RelativeLayout>